feat(flink): promote the confirmed smaller-buffer, specific-Avro default
Three interleaved repetitions against the previous default, each arm carrying
its own A/A control and the pair order reversed on alternate repetitions:
523,082 against 121,496 rows/s/core and 5.705M against 3.079M rows/s, so
+330.5% per core and +85.3% throughput with the per-core figure not bought by
throughput. Zero duplicates on both arms. Checkpoint recovery was exercised on
the candidate first and all 32 subtasks restored.

Four knobs move: generated Avro records instead of generic, 12,500-row batches
instead of 50,000, 25,000 buffered instead of 100,000, and one request in
flight instead of two. The image defaults move with them, because a reviewer
starting the container by hand should get the configuration the published
numbers describe.

The recorded verdict is `accepted: false`, and it is the baseline that failed
the gate. Every candidate A/A control sat within the declared noise floor at
0.65%, 0.79% and 2.68%; the baseline's read 7.43%, 10.17% and 49.57%, the last
being one configuration measured twice in a single sweep at 129,103 and 77,819
rows/s/core. Six observations of it span 1.73x while the candidate holds 2.12%,
interleaved in the same sweeps minutes apart. Publishing over that gate is a
decision, and REVIEW.md records it as one rather than reconciling it.

REVIEW.md is rewritten around the confirmed result, the flight-recording
attribution that puts about 60% of the arm's CPU inside the ClickHouse
connector's encoder and Avro's decoder, the three connector findings that owes
upstream, and the measured answer to rule 6: the arm is blocked rather than
saturated, waiting roughly 46 ms of every 69 ms INSERT cycle for ClickHouse to
acknowledge.

The session's records are committed beside the first session's. The controls
phase is removed: the published run this search feeds measures every arm
together, so a tuning-session control of another entrant buys nothing.